--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -119,7 +119,7 @@
 }
 
 .checkbox:hover {
-  border-color: #94a3b8;
+  border-color: #3c434d;
 }
 
 .checkbox:checked {
@@ -161,7 +161,7 @@
   padding: 0.5rem;
   border: none;
   background: transparent;
-  color: #94a3b8;
+  color: #3c434d;
   cursor: pointer;
   border-radius: 0.5rem;
   display: flex;
